--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div class="grid-container">
-    <h1 class="title">Tenho certeza que já nos conhecemos</h1>
-    <p class="subtitle">O que te traz aqui novamente?</p>
+    <h1 class="title">Lara não fique triste</h1>
+    <p class="subtitle">mas se ficar tente uma dessas opções</p>
 
     <a href="https://forms.gle/YjXsja99rVsuh7fN6"><img class="way" src="https://www.revistapazes.com/content/uploads/2017/01/cafune-1068x798.jpg" alt="cafuné"></img></a>
  
